--- a/Views/UniBite.ejs
+++ b/Views/UniBite.ejs
@@ -14,7 +14,8 @@
     <script src="/JavaScript/gsap.min.js"></script>
     <script src="/JavaScript/ScrollTrigger.min.js"></script>
 
-    <!-- Custom Script -->
+    <!-- Custom Scripts -->
+    <script src="/JavaScript/mobile-menu.js"></script>
     <script src="/JavaScript/UniBite.js"></script>
 </head>
 
