--- a/Views/Stores.ejs
+++ b/Views/Stores.ejs
@@ -61,7 +61,7 @@
                                 <span>Pickup in <%= store.averagePickupTime %> mins</span>
                             </div>
                         </div>
-                        <a href="/stores/<%= store._id %>" class="btn btn-primary btn-full">
+                        <a href="/stores/<%= encodeURIComponent(store.name) %>" class="btn btn-primary btn-full">
                             View Menu
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
