--- a/Views/UniBite.ejs
+++ b/Views/UniBite.ejs
@@ -104,7 +104,6 @@
     <h2 class="Section-Title">OUR PARTNERS</h2>
 
     <div class="partners">
-
         <div class="item item1">
             <div class="card-inner">
                 <div class="card-front">
@@ -112,9 +111,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/FARGHALYback.jpg">
-                    <p>Feeling the heat?</p>
-                    <h2>Cool-Down at Farghaly</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Feeling the heat?</p>
+                        <h2>Cool-Down at Farghaly</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -126,9 +127,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/SBARROback.jfif">
-                    <p>Craving a slice of pizza?</p>
-                    <h2>Head to Sbarro!</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Craving a slice of pizza?</p>
+                        <h2>Head to Sbarro!</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -140,9 +143,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/TBSback.jpg">
-                    <p>Freshly baked pastries and Exceptional drinks await!</p>
-                    <h2>The Bakery shop</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Freshly baked pastries and Exceptional drinks await!</p>
+                        <h2>The Bakery shop</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -154,9 +159,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/ZALABYAback.jpg">
-                    <p>Quick Zalabya Snack?</p>
-                    <h2>Batates & Zalabya!</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Quick Zalabya Snack?</p>
+                        <h2>Batates & Zalabya!</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -168,9 +175,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/CINNABONback.jpeg">
-                    <p>Sweet and sticky desert?</p>
-                    <h2>Cinnabon is here!</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Sweet and sticky desert?</p>
+                        <h2>Cinnabon is here!</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,9 +191,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/GYROback.jpeg">
-                    <p>Hungry like a greek god?</p>
-                    <h2>Gyro for the rescue!</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Hungry like a greek god?</p>
+                        <h2>Gyro for the rescue!</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -196,9 +207,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/CORNERback.jpg">
-                    <p>Foul, Falafel, and more!</p>
-                    <h2>Only at My Corner</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Foul, Falafel, and more!</p>
+                        <h2>Only at My Corner</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -210,9 +223,11 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/RTOGOback.jpg">
-                    <p>Quick bite between lectures?</p>
-                    <h2>RtoGO got you</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Quick bite between lectures?</p>
+                        <h2>RtoGO got you</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -224,13 +239,14 @@
                 </div>
                 <div class="card-back">
                     <img src="/Images/MANback.jpeg">
-                    <p>Quick trip to lebanon?</p>
-                    <h2>Visit Manoucheh</h2>
-                    <button class="view-menu">View Menu</button>
+                    <div class="card-back-content">
+                        <p>Quick trip to lebanon?</p>
+                        <h2>Visit Manoucheh</h2>
+                        <button class="view-menu">View Menu</button>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
